<?xml version="1.0" encoding="utf-8"?>
<!--
  Copyright 2017 Google Inc. All Rights Reserved.

  Licensed under the Apache License, Version 2.0 (the "License");
  you may not use this file except in compliance with the License.
  You may obtain a copy of the License at

  http://www.apache.org/licenses/LICENSE-2.0

  Unless required by applicable law or agreed to in writing, software
  distributed under the License is distributed on an "AS IS" BASIS,
  WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  See the License for the specific language governing permissions and
  limitations under the License.
-->
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/container"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.RecyclerView
        android:id="@+id/history"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:background="@color/history_background"
        android:clipToPadding="false"
        android:paddingBottom="@dimen/spacing_medium"
        android:paddingTop="@dimen/spacing_medium"/>

    <LinearLayout
        android:id="@+id/control"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?android:attr/windowBackground"
        android:elevation="@dimen/elevation_control"
        android:orientation="horizontal"
        tools:targetApi="lollipop">

        <com.google.cloud.android.dialogflow.ui.AudioIndicatorView
            android:id="@+id/indicator"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:paddingLeft="@dimen/spacing_medium"
            android:paddingRight="@dimen/spacing_medium"
            android:visibility="gone"/>

        <EditText
            android:id="@+id/text"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@null"
            android:hint="@string/hint_text"
            android:imeOptions="actionSend"
            android:inputType="textCapSentences"
            android:maxLines="1"
            android:padding="@dimen/spacing_large"/>

        <ImageButton
            android:id="@+id/toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:contentDescription="@string/description_voice"
            android:minHeight="@dimen/button_minHeight"
            android:minWidth="@dimen/button_minWidth"
            android:tint="@color/input_button"/>

    </LinearLayout>

</LinearLayout>
